updates early February 2018

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -93,11 +93,11 @@ email: \href{mailto:a.xambo@qmul.ac.uk}{a.xambo@qmul.ac.uk}\\
 
 %%\hrule
 \section*{Current Position}
-\emph{Postdoctoral Research Assistant}, Center for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London
+\emph{Postdoctoral Research Assistant}, Center for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London (QMUL).
 
 %%\hrule
 \section*{Areas of Interest}
-Design of Digital Musical Instruments (DMIs) • Real-time Interactive Systems for Music Performance • Human-Computer Interaction • Interaction Design • Tangible, Physical \& Social Computing • Computer-Supported Collaborative, Participatory \& Improvisation Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Multichannel Spatialization • Algorithmic Composition \& Randomized Algorithms • Immersive Sound Experiences • Women in Music Tech • Arts \& Social Sciences Research Methods • STEAM Education • Data Visualization • Creative Programming
+Design of Digital Musical Instruments (DMIs) • Real-time Interactive Systems for Music Performance • Human-Computer Interaction • Interaction Design • Tangible, Physical \& Social Computing • Computer-Supported Collaborative, Participatory \& Improvisation Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Multichannel Spatialization • Generative \& Algorithmic Music • Immersive Sound Experiences • Women in Music Tech • Arts \& Social Sciences Research Methods • STEAM Education • Data Visualization • Creative Programming
 
 %\hrule
 \section*{Education}
@@ -134,6 +134,12 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \years{2006}\textsc{El món com a instrument} (The world as an instrument). Francisco López. Barcelona.\\
 \years{1998}\textsc{Improvització mètode Cobra} (Cobra Improvisation Method). Orquestra del Caos. Barcelona.
 
+%\hrule
+\section*{Teaching Education}
+\noindent
+\years{2018--present}\textsc{Learning and Teaching in Higher Education}. Emma Kennedy. QMUL. London.\\
+\years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars}. Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
+
 %%\hrule
 \section*{Employment}
 \noindent
@@ -159,7 +165,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \noindent
 
 \subsection*{Research Honors \& Awards}
-\years{2017} 2017 NCWIT Engagement Excellence Award (\$5,000 cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
+\years{2017} NCWIT Engagement Excellence Award (\$5,000 cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
 \years{10/2010--07/2013}\textsc{Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
 \years{03/2010--06/2010}\textsc{Fully-Funded OU Visiting Research Studentship}. The Open University, Milton Keynes, UK.
 
@@ -467,30 +473,30 @@ Collaborator: Gerard Roma.
 \subsection*{Code}
 \noindent
 
-\years{2017c} HAP (2017). Retrieved August 27 2017, from \href{https://github.com/axambo/HAP}{https://github.com/axambo/HAP}\\
+\years{2016--present}MIRLC: \href{https://github.com/axambo/MIRLC}{github.com/axambo/MIRLC}.\\
 Role: Concept and implementation.\\
-\years{2017b}MIRLC. (2016--2017). Retrieved March 30 2017, from \href{https://github.com/axambo/MIRLC}{https://github.com/axambo/MIRLC}\\
+\years{2017b} HAP: \href{https://github.com/axambo/HAP}{github.com/axambo/HAP}.\\
 Role: Concept and implementation.\\
-\years{2017a}Beacon. (2017). Retrieved March 30 2017, from \href{https://github.com/axambo/beacon}{https://github.com/axambo/beacon}\\
+\years{2017a}Beacon: \href{https://github.com/axambo/beacon}{github.com/axambo/beacon}.\\
 Role: Concept and implementation of the audio engine.\\
-\years{2016}Algonoise. (2016). Retrieved October 18 2016, from \href{https://github.com/axambo/algonoise}{https://github.com/axambo/algonoise}\\
+\years{2016}Algonoise.: \href{https://github.com/axambo/algonoise}{github.com/axambo/algonoise}.\\
 Role: Concept and implementation.\\
-\years{2014}SoundXY4: The Art of Noise. (2014). Retrieved October 18 2016, from \href{https://github.com/axambo/soundxy4}{https://github.com/axambo/soundxy4}\\
+\years{2014}SoundXY4: The Art of Noise: \href{https://github.com/axambo/soundxy4}{github.com/axambo/soundxy4}.\\
 Role: Concept, implementation and tangible user interface design.\\
-\years{2012}SoundXY. (2012). Retrieved October 18 2016, from \href{https://github.com/axambo/soundxy2}{https://github.com/axambo/soundxy2}\\
+\years{2012}SoundXY: \href{https://github.com/axambo/soundxy2}{github.com/axambo/soundxy2}.\\
 Role: Concept, implementation and tangible user interface design.
 
 \subsection*{Video Creations \& Animation Films}
 \noindent
 
-\years{2003}Xambó, A. (2003). \emph{Cosmogonias} (3 min). Spain. Video creation | Animation film.\\
-\years{2002b}Xambó, A. (2002). \emph{b.scope} (3 min). Spain. Video creation.\\ %3:23
-\years{2002a}Xambó, A. (2002). \emph{Transdata Pr.} (5 min). Spain. Video creation.\\
-\years{2000}Xambó, A. (2000). \emph{clubsfera} (3 min). Spain. Video creation | Animation film.\\
-\years{1999}Xambó, A. (1999). \emph{Mitösöma} (10 min). Spain. Video creation | Animation film.\\
-\years{1998c}Xambó, A. (1998). \emph{Lufthansa} (3 min). Spain. Videoclip for La Más Fina.\\
-\years{1998b}Xambó, A. (1998). \emph{Neila} (2 min). Spain. Video creation.\\
-\years{1998a}Xambó, A. (1998). \emph{Sueños} (1 min). Spain. Video creation | Animation film.
+\years{2003}Xambó, A. \emph{Cosmogonias} (3 min). Spain. Video creation | Animation film.\\
+\years{2002b}Xambó, A. \emph{b.scope} (3 min). Spain. Video creation.\\ %3:23
+\years{2002a}Xambó, A. \emph{Transdata Pr.} (5 min). Spain. Video creation.\\
+\years{2000}Xambó, A.  \emph{clubsfera} (3 min). Spain. Video creation | Animation film.\\
+\years{1999}Xambó, A. \emph{Mitösöma} (10 min). Spain. Video creation | Animation film.\\
+\years{1998c}Xambó, A. \emph{Lufthansa} (3 min). Spain. Videoclip for La Más Fina.\\
+\years{1998b}Xambó, A. \emph{Neila} (2 min). Spain. Video creation.\\
+\years{1998a}Xambó, A. \emph{Sueños} (1 min). Spain. Video creation | Animation film.
 
 \subsection*{Installations \& Visuals}
 \noindent
@@ -568,7 +574,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \section*{Mentoring}
 \noindent
 
-\years{05/2016--2017}As a Co-Chair of the student-led organization \emph{Women in Music Tech} I have been mentoring and advising the female graduate students of this organization, including the Chair of the organization, Léa Ikkache, and the Editor-in-Chief of the newsletter Amruta Vidwans. I have also mentored female newcomers to the organization, such as Jyoti Narang.\\
+\years{05/2016--12/2017}Mentor and advisor the female graduate students of the student-led organization \emph{Women in Music Tech}, including the Chair of the organization, Léa Ikkache, the Editor-in-Chief of the newsletter Amruta Vidwans and female newcomers to the organization, such as Jyoti Narang.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at ICLI '16 (see Peer-Reviewed Conference Papers) and we have submitted a second conference paper and are preparing a journal article.
 
@@ -654,8 +660,9 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Music Judge}
 \noindent
 
-\years{2017}\emph{National Student Electronic Music Event 2017}, Louisiana State University. Baton Rouge, LA, USA.\\
-\years{2017}\emph{EarSketch National Competition 2017}, GTCMT, Georgia Tech. Atlanta, GA, USA.
+\years{2018}\emph{Celebrating Women in Sound, 8 March 2018}, Goldsmiths University, London.\\
+\years{2017b}\emph{National Student Electronic Music Event 2017}, Louisiana State University. Baton Rouge, LA, USA.\\
+\years{2017a}\emph{EarSketch National Competition 2017}, GTCMT, Georgia Tech. Atlanta, GA, USA.
 
 %\hrule
 \subsection*{Consultancies}
@@ -694,9 +701,9 @@ Catalan (native or bilingual proficiency), Spanish (native or bilingual proficie
 Operating Systems: OS X, Windows and Linux desktop (Ubuntu).\\
 Programming: Actionscript, Assembly (basic level), C, CSS, Java, JavaScript, jQuery, MySQL, PHP, Python, Web Audio, XML.\\
 Scientific Apps: MATLAB, Octave, R, SPSS.\\
-Version control systems: CVS, Git, Subversion.\\
+Version Control Systems: CVS, Git, Subversion.\\
 Music Apps: DAWs (Ableton Live, Cubase, Reaper, Logic Pro), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor).\\
-Video analysis Apps: ELAN, VCode.\\
+Text \& Multimedia Analysis Apps: ELAN, MAXQDA, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Jekyll.\\
 Hardware: Arduino, Bela.
 
