upldates mid February 2018

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -397,23 +397,23 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Solo Albums}
 \noindent
 
-\years{2013}peterMann. (2013). \emph{On the Go} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
-\years{2011}peterMann. (2011). \emph{init} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.
+\years{2013}peterMann. \emph{On the Go} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
+\years{2011}peterMann. \emph{init} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.
 
 \subsection*{Band Albums}
 \noindent
 
-\years{1996}La Más Fina. (1996). \emph{Zande Phondex} [CD]. Barcelona: Apache Productions.\\
-\years{1994}La Más Fina. (1994). \emph{Como quien dice la hoja iberia extrafina} [Cassette]. Barcelona: Self-released.\\
-\years{1992}Sosa's Cáustica. (1992). \emph{Paraponera Clavata} [Cassette]. Barcelona: Murmur Town.
+\years{1996}La Más Fina. \emph{Zande Phondex} [CD]. Barcelona: Apache Productions.\\
+\years{1994}La Más Fina. \emph{Como quien dice la hoja iberia extrafina} [Cassette]. Barcelona: Self-released.\\
+\years{1992}Sosa's Cáustica. \emph{Paraponera Clavata} [Cassette]. Barcelona: Murmur Town.
 
 \subsection*{Participation in Compilations}
 \noindent
 
-\years{2018}peterMann. (2018). “n02-petermann" (11 min 10 sec). in \emph{Noiselets} [MP3 files]. Barcelona: Carpal Tunnel.\\
-\years{2016}peterMann. (2016). “Go wild y'all" (1 min). in \emph{Microtopies 2016} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
-\years{2015}peterMann. (2015). “ldnsktch01" (1 min). In \emph{Microtopies 2015} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
-\years{2010}peterMann. (2010). “init11" (3 min 29 sec). In \emph{Electronic music from Catalonia 2010} [CD]. Barcelona: Catalan! Arts / Sonar, Barcelona.
+\years{2018}peterMann. “n02-petermann" (11 min 10 sec). in \emph{Noiselets} [MP3 files]. Barcelona: Carpal Tunnel.\\
+\years{2016}peterMann. “Go wild y'all" (1 min). in \emph{Microtopies 2016} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
+\years{2015}peterMann. “ldnsktch01" (1 min). In \emph{Microtopies 2015} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
+\years{2010}peterMann. “init11" (3 min 29 sec). In \emph{Electronic music from Catalonia 2010} [CD]. Barcelona: Catalan! Arts / Sonar, Barcelona.
 
 \subsection*{Broadcasting}
 \noindent
@@ -472,7 +472,10 @@ Collaborator: Gerard Roma.
 
 \subsection*{Code}
 \noindent
-
+\years{2018}HCI Python Utils: \href{https://github.com/axambo/hci-python-utils}{github.com/axambo/hci-python-utils}.\\
+Role: Concept and implementation.\\
+\years{2017--present} WACastMix: \href{http://annaxambo.me/code/WACastMix}{annaxambo.me/code/WACastMix}.\\
+Role: Concept and implementation.\\
 \years{2016--present}MIRLC: \href{https://github.com/axambo/MIRLC}{github.com/axambo/MIRLC}.\\
 Role: Concept and implementation.\\
 \years{2017b} HAP: \href{https://github.com/axambo/HAP}{github.com/axambo/HAP}.\\
@@ -634,23 +637,24 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
 \years{2018} \emph{International Conference of the Learning Sciences (ICLS)} (2018)\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
-\years{2011--2016}\emph{New Interfaces for Musical Expression} (2011--2017).\\
-\years{2015--2018}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2018).\\
+\years{2011--2018}\emph{New Interfaces for Musical Expression} (2011--2018).\\
+\years{2015--2017}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2017).\\
 \years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2018).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
 \years{2017}\emph{International Computer Music Conference -- ICMC Music} (2017).\\
 \years{2013}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2016}\emph{International Conference on Live Interfaces} (2016).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
+\years{2018}\emph{ACM SIGGRAPH} (2018).\\
 \years{2016}\emph{Web Audio Conference} (2016--2017).
 
 \subsection*{Journal Reviewer}
 \noindent
 
 \years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.\\
-\years{2016b}\emph{Interacting with Computers}. Oxford Journals.\\
+\years{2016}\emph{Interacting with Computers}. Oxford Journals.\\
 \years{2017}\emph{Journal of Audio Engineering Society}. Audio Engineering Society.\\
-\years{2016a}\emph{Qualitative Research}. Sage Publications.
+\years{2016}\emph{Qualitative Research}. Sage Publications.
 
 \subsection*{Jury Member}
 \noindent
