updates mid March 2018

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -137,8 +137,8 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\hrule
 \section*{Teaching Education}
 \noindent
-\years{2018--present}\textsc{Learning and Teaching in Higher Education}. Emma Kennedy. QMUL. London.\\
-\years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars}. Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
+\years{2018--present}\textsc{Learning and Teaching in Higher Education}. Taught by Emma Kennedy. QMUL. London.\\
+\years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars}. Taught by Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
 
 %%\hrule
 \section*{Employment}
@@ -293,8 +293,8 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
-\years{2018b}Skach, S., \textbf{Xambó, A.}, Turchet, L., Stolfi, A., Stewart, B., Barthet, M. (accepted). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". In TEI 2018 (work-in-progress track).\\
-\years{2018a}Weisling, A., \textbf{Xambó, A.} (accepted). “Beacon: Exploring Physicality in Digital Performance". In TEI 2018 (artistic track).\\
+\years{2018b}Skach, S., \textbf{Xambó, A.}, Turchet, L., Stolfi, A., Stewart, B., Barthet, M. (2018). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". In \emph{Proceedings of the Twelfth International Conference on Tangible, Embedded, and Embodied Interaction (TEI '18)}. Stockholm, Sweden. pp. 80--87.\\
+\years{2018a}Weisling, A., \textbf{Xambó, A.} (2018). “Beacon: Exploring Physicality in Digital Performance". In \emph{Proceedings of the Twelfth International Conference on Tangible, Embedded, and Embodied Interaction (TEI '18)}. Stockholm, Sweden. pp. 586--591.\\
 \years{2017a}\textbf{Xambó, A.}, Roma, G. (2017). “Hyperconnected Action Painting". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\
 \years{2016c}Tsuchiya, T., \textbf{Xambó, A.}, Freeman, J. (2016). “Adapting DAW-driven Musical Language to Live Coding: A Case Study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
 \years{2016b}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). “Learning to Code Through MIR". In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
