updates mid March 2018

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -362,6 +362,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Poster Presentations \& Demos}
 \noindent
 
+\years{2018} \textsc{Demo Presenter} together with Skach, S. (March 19, 2018). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". \emph{TEI '18}. Stockholm, Sweden. \\
 \years{2017c} \textsc{Poster Presenter}. (June 22, 2017). Authors: Weisling, A. and Xambó, A. “Constructing a Conceptual Framework for Collaborative Audiovisual Performance". \emph{ICCC '17}. Atlanta, GA, USA.\\
 \years{2017b} \textsc{Poster Presenter}. (June 22, 2017). Authors: Weisling, A., Xambó, A., Magerko, B., Roma, G., Jacob, M., Bhanu, N., and Freeman, J. “TuneTable: A Tangible Computational Music Installation for Informal Learning". \emph{ICCC '17}. Atlanta, GA, USA.\\
 \years{2017a} \textsc{Poster \& Demo Presenter}. (March 21, 2017). “Experience and Ownership with a Tangible Computational Music Installation for Informal Learning". \emph{TEI '17}. Yokohama, Japan.\\
@@ -443,6 +444,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Collaborative Performances}
 \noindent
 %\years{2017e}Brown, N., Stolfi, A., Schroeder, F., Chudy, M., Pase, T., Wilkie, S., \textbf{Xambó, A.}, Ikkache, L., Weisling, A. (submitted). “Transmusicking II". \\
+\years{2018}Weisling, A., \textbf{Xambó, A.} (March 20, 2018). “Beacon". \emph{TEI}. Stockholm, Sweden.\\
 \years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., \textbf{Xambó, A.}, Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). “Transmusicking I". Audio Mostly 2017.\\
 \years{2017c}\textbf{Xambó, A.}, Roma, G. (August 21, 2017). “Hyperconnected Action Painting". Web Audio Conference 2017.\\
 \years{2017}Weisling, A., \textbf{Xambó, A.} (May 16, 2017). “Beacon". \emph{NIME}. Stengade. Copenhagen, Denmark.\\
