updates early May 2018

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -79,11 +79,20 @@ bookmarks, colorlinks, breaklinks,
 \cfoot{Curriculum Vitae}%removes pagination at the center of the footer
 \rfoot{\thepage\ of \pageref{LastPage}}
 
+% CUSTOM
+\usepackage{microtype}
+%\hyphenpenalty 10000
+%\exhyphenpenalty 1000
+%\widowpenalty 10000
+%\clubpenalty 10000
+%\interfootnotelinepenalty=10000
+
+
 % DOCUMENT
 \begin{document}
 {\Huge Anna Xambó}\\[0.1cm]
 \textsc{BA, MA, MSc, PhD}\\[1cm]
-Center for Digital Music\\
+Centre for Digital Music\\
 School of Electronic Engineering and Computer Science\\
 Queen Mary University of London\\
 Mile End Road, London \texttt{E1 4NS}, UK\\[.2cm]
@@ -93,7 +102,7 @@ email: \href{mailto:a.xambo@qmul.ac.uk}{a.xambo@qmul.ac.uk}\\
 
 %%\hrule
 \section*{Current Position}
-\emph{Postdoctoral Research Assistant}, Center for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London (QMUL).
+\emph{Postdoctoral Research Assistant}, Centre for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London (QMUL).
 
 %%\hrule
 \section*{Areas of Interest}
@@ -137,13 +146,14 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\hrule
 \section*{Teaching Education}
 \noindent
-\years{2018--present}\textsc{Learning and Teaching in Higher Education}. Taught by Emma Kennedy. QMUL. London.\\
-\years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars}. Taught by Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
+\years{2018}\textsc{Women into Leadership}. Instructor: Lorraine Smith. QMUL. London.\\
+\years{2018}\textsc{Learning and Teaching in Higher Education}. Instructor: Emma Kennedy. QMUL. London.\\
+\years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars}. Instructor: Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
 
 %%\hrule
 \section*{Employment}
 \noindent
-\years{10/2017--present}\textsc{Postdoctoral Research Assistant}. Center for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London. \\
+\years{10/2017--present}\textsc{Postdoctoral Research Assistant}. Centre for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London. \\
 \years{07/2015--09/2017}\textsc{Postdoctoral Fellow}. Center for Music Technology | Digital Media Program, Georgia Tech. \\
 \years{08/2013--09/2014}\textsc{Research Fellow}. London Knowledge Lab, UCL Institute of Education. London. \\
 %{\small Qualitative data collection and analysis (6 sites), development of research tools and processes, dissemination activities and paper writing of results.}\\
@@ -267,6 +277,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Journal Articles}
 \noindent
+\years{2018}\textbf{Xambó, A.}, Roma, G. and Shah, P. and Tsuchiya, T. and Freeman, J. and Magerko, B. (2018). “Turn-taking and Online Chatting in Remote and Co-located Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
 \years{2016c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2016). “Exploring Social Interaction with a Tangible Music Interface". \emph{Interacting with Computers}.\\
 \years{2016b}Jewitt, C., Price, S., \textbf{Xambó, A.} (2016). “Conceptualising and Researching the Body in Digital Contexts: Towards New Methodological Conversations Across the Arts and Social Sciences". \emph{Qualitative Research}.\\
 \years{2016a}Jewitt, C., \textbf{Xambó, A.} and Price, S. (2016). “Exploring Methodological Innovation in the Social Sciences: The Body in Digital Environments and the Arts". \emph{International Journal of Social Research Methodology}.\\
@@ -275,6 +286,9 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
+\years{2018c}\textbf{Xambó, A.} (2018) “Who Are the Women Authors in NIME?---Improving Gender Balance in NIME Research". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA.\\ 
+\years{2018b}\textbf{Xambó, A.}, Roma, G., Lerch, A., Barthet, M., Fakekas, G. (2018) “Live Repurposing of Sounds: MIR Explorations with Personal and Crowdsourced Databases". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA.\\ 
+\years{2018a}Weisling, A., \textbf{Xambó, A.}, Olowe, I., Barthet, M. (2018) “Surveying the Compositional and Performance Practices of Audiovisual Practitioners". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA.\\ 
 \years{2017d}\textbf{Xambó, A.}, Shah, P., Roma, G., Freeman, J., Magerko, B. (2017) “Turn-taking and Chatting in Collaborative Music Live Coding". In \emph{Proceedings of the Audio Mostly Conference (AM '17)}. London.\\ 
 \years{2017c}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Handwaving: Gesture Recognition for Participatory Mobile Music". In \emph{Proceedings of the Audio Mostly Conference (AM '17)}. London.\\
 \years{2017b}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Loop-aware Audio Recording for the Web". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London\\ 
@@ -321,6 +335,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{External}
 \noindent
 
+\years{2018} \textsc{Oral Presenter}. (April 21, 2018). “Live Repurposing of Crowdsourced Sounds: Challenges and Opportunities of Using Online Repositories in Music Performance". \emph{Sonorities Symposium, Sonorities Festival}. Belfast, Northern Ireland.\\
 \years{2017} \textsc{Oral Presenter}. (August 24, 2017). “Turn-taking and Chatting in Collaborative Music Live Coding". \emph{AM '17}. London.\\
 \years{2016b} \textsc{Oral Presenter}. (July 2, 2016). “Challenges and New Directions for Collaborative Live Coding in the Classroom". \emph{ICLI 2016}. Brighton, UK.\\
 \years{2016a} \textsc{Keynote Speaker}. (April 22, 2016). “Anna Xambó and Liz Dobson in Conversation". \emph{Women in Sound Women on Sound 2016: Educating girls in sound} at University of Lancaster. Lancaster, UK.\\
@@ -383,6 +398,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Workshops}
 \noindent
 
+\years{2018} Allik, A., \textbf{Xambó, A.} (April 7--8, 2018). “Collaborative Network Music". \emph{Rewire 2018}, The Hague, The Netherlands. Organized by Music Hackspace. Funded by Rewire.\\
 \years{2017} \textbf{Xambó, A.} (October 14, 2017). “Huddersfield Girl Geeks: Audiovisual Creative Coding with P5.js". \emph{Kirklees Libraries}, Huddersfield, UK. Funded by Google.\\
 \years{2013} \textbf{Xambó, A.} (May 2, 2013). “Introduction to SuperCollider". \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
 \years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). “Tangible Musical Interfaces with SuperCollider". \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.
@@ -444,11 +460,11 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Collaborative Performances}
 \noindent
 %\years{2017e}Brown, N., Stolfi, A., Schroeder, F., Chudy, M., Pase, T., Wilkie, S., \textbf{Xambó, A.}, Ikkache, L., Weisling, A. (submitted). “Transmusicking II". \\
-\years{2018}Weisling, A., \textbf{Xambó, A.} (March 20, 2018). “Beacon". \emph{TEI}. Stockholm, Sweden.\\
-\years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., \textbf{Xambó, A.}, Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). “Transmusicking I". Audio Mostly 2017.\\
-\years{2017c}\textbf{Xambó, A.}, Roma, G. (August 21, 2017). “Hyperconnected Action Painting". Web Audio Conference 2017.\\
-\years{2017}Weisling, A., \textbf{Xambó, A.} (May 16, 2017). “Beacon". \emph{NIME}. Stengade. Copenhagen, Denmark.\\
-\years{2017}Weisling, A., \textbf{Xambó, A.} (February 11, 2017). “Beacon". \emph{Root Signals Festival}. Georgia Southern University. Statesboro, Georgia, United States.\\
+\years{2018}Weisling, A., \textbf{Xambó, A.} (March 20, 2018). “Beacon". \emph{TEI '18}. Kulturhuset. Stockholm, Sweden.\\
+\years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., \textbf{Xambó, A.}, Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). “Transmusicking I". \emph{AM '17}. Oxford House Theatre. London, UK. \\
+\years{2017c}\textbf{Xambó, A.}, Roma, G. (August 21, 2017). “Hyperconnected Action Painting". \emph{WAC 2017}. Oxford House Theatre. London, UK. \\
+\years{2017b}Weisling, A., \textbf{Xambó, A.} (May 16, 2017). “Beacon". \emph{NIME 2017}. Stengade. Copenhagen, Denmark.\\
+\years{2017a}Weisling, A., \textbf{Xambó, A.} (February 11, 2017). “Beacon". \emph{Root Signals Festival 2017}. Georgia Southern University. Statesboro, Georgia, United States.\\
 \years{2012}pulso (Roma, G., \textbf{Xambó, A.}). (March 15, 2012). Live coding session. \emph{Live Coding Sessions}. Niu. Barcelona, Spain.\\
 \years{2004}pulso (Roma, G., \textbf{Xambó, A.}). (May 29, 2004). Live. \emph{Minima Festival}. Gandía, Spain.\\
 \years{2002}b4ng (Roma, G., \textbf{Xambó, A.}, Brugos, C., Clarens). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain. 
@@ -579,6 +595,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \section*{Mentoring}
 \noindent
 
+\years{01/2018--04/2018}Co-advisor of Tayjo Padmini Vaduru (master student in Computer Science, Queen Mary University of London) of her master project proposal on automated generation of soundscapes using content from Audio Commons.\\
 \years{05/2016--12/2017}Mentor and advisor the female graduate students of the student-led organization \emph{Women in Music Tech}, including the Chair of the organization, Léa Ikkache, the Editor-in-Chief of the newsletter Amruta Vidwans and female newcomers to the organization, such as Jyoti Narang.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at ICLI '16 (see Peer-Reviewed Conference Papers) and we have submitted a second conference paper and are preparing a journal article.
@@ -600,7 +617,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Blogging}
 \noindent
 
-\years{2016--present}\href{htp://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator, Co-Editor, Reviewer and Co-Author.\\ 
+\years{05/2016--12/2017}\href{htp://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator, Co-Editor, Reviewer and Co-Author.\\ 
 \years{09/2013--08/2014}\href{http://midassblog.wordpress.com}{MIDAS's Blog}, the research blog of the MIDAS project. Co-Creator and Co-Author. \\ 
 \years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-Creator and Co-Author.\\
 \years{03/2006--03/2009}\href{http://streetypes.blogspot.com}{streeTypes}, a blog on typography in public spaces. Creator and Author.  
@@ -624,31 +641,33 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Committee Member / Conference Chair}
 \noindent
 
-\years{2017c}\textsc{Session Chair}. \emph{WAC '17}. London.\\
-\years{2017b}\textsc{Programme Committee Member}. \emph{Second Conference on Computer Simulation of Musical Creativity}, Open University. Milton Keynes, UK.\\ 
-\years{2017a}\textsc{Local Committee Member}. \emph{International Conference on Computational Creativity 2017}, Georgia Tech. Atlanta, GA, USA.\\
+\years{2018}\textsc{Programme Committee Member}. \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
+\years{2017}\textsc{Session Chair}. \emph{Web Audio Conference 2017}. London.\\
+\years{2017}\textsc{Programme Committee Member}. \emph{Second Conference on Computer Simulation of Musical Creativity}, Open University. Milton Keynes, UK.\\ 
+\years{2017}\textsc{Local Committee Member}. \emph{International Conference on Computational Creativity 2017}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2016}\textsc{Co-Founder \& Co-Chair}. \emph{Women in Music Tech Committee}, GTCMT, Georgia Tech. Atlanta, GA, USA.\\
 \years{2016}\textsc{Music/Artworks Co-Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
-\years{2011}\textsc{Session Chair} (``Laptop/Coding/NI''). \emph{ICMC '11}. Huddersfield, UK.\\
+\years{2011}\textsc{Session Chair} (``Laptop/Coding/NI''). \emph{International Computer Music Conference}. Huddersfield, UK.\\
 \years{2011}\textsc{Committee Member}. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.
 
 \subsection*{Conference Reviewer}
 \noindent
 
+\years{2018}\emph{ACM special interest group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
+\years{2018}\emph{International Conference of the Learning Sciences} (2018)\\
+\years{2018}\emph{International Society for Music Information Retrieval Conference} (2018)\\
 \years{2017}\emph{ACM Creativity and Cognition} (2017).\\
-\years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
-\years{2018} \emph{International Conference of the Learning Sciences (ICLS)} (2018)\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
-\years{2011--2018}\emph{New Interfaces for Musical Expression} (2011--2018).\\
-\years{2015--2017}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2017).\\
-\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2018).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
-\years{2017}\emph{International Computer Music Conference -- ICMC Music} (2017).\\
-\years{2013}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
+\years{2017}\emph{International Computer Music Conference -- ICMC Music} (2017--2018).\\
 \years{2016}\emph{International Conference on Live Interfaces} (2016).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
-\years{2018}\emph{ACM SIGGRAPH} (2018).\\
-\years{2016}\emph{Web Audio Conference} (2016--2017).
+\years{2016}\emph{Web Audio Conference} (2016--2018).\\
+\years{2015--2017}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2017).\\
+\years{2013}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
+\years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
+\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2018).\\
+\years{2011--2018}\emph{New Interfaces for Musical Expression} (2011--2018).\\
 
 \subsection*{Journal Reviewer}
 \noindent
@@ -661,6 +680,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Jury Member}
 \noindent
 
+\years{2018}\emph{COLLAB2018}, Institute of Electronic Music and Acoustics (IEM), University of Music and Performing Arts. Graz, Austria.\\
 \years{2016}\emph{MOOG Hackathon 2016}, GTCMT, Georgia Tech. Atlanta, GA, USA.
 
 \subsection*{Music Judge}
@@ -687,6 +707,7 @@ Co-Founder of a freelance studio focused on user-centric software and AV communi
 
 \subsection*{Research Visits}
 
+\years{Forthcoming}Filmuniversität Babelsberg KONRAD WOLF, Potsdam, Germany.\\
 \years{05/2012}University of Strathclyde, Glasgow, Scotland, UK.\\
 \years{06/2011}University of Strathclyde, Glasgow, Scotland, UK.\\
 \years{04/2011--05/2011} UPF, Barcelona, Spain.\\
