--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -277,7 +277,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Journal Articles}
 \noindent
-\years{2018}\textbf{Xambó, A.}, Roma, G. and Shah, P. and Tsuchiya, T. and Freeman, J. and Magerko, B. (2018). “Turn-taking and Online Chatting in Remote and Co-located Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
+\years{2018}\textbf{Xambó, A.}, Roma, G. and Shah, P. and Tsuchiya, T. and Freeman, J. and Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
 \years{2016c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2016). “Exploring Social Interaction with a Tangible Music Interface". \emph{Interacting with Computers}.\\
 \years{2016b}Jewitt, C., Price, S., \textbf{Xambó, A.} (2016). “Conceptualising and Researching the Body in Digital Contexts: Towards New Methodological Conversations Across the Arts and Social Sciences". \emph{Qualitative Research}.\\
 \years{2016a}Jewitt, C., \textbf{Xambó, A.} and Price, S. (2016). “Exploring Methodological Innovation in the Social Sciences: The Body in Digital Environments and the Arts". \emph{International Journal of Social Research Methodology}.\\
